--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent"
     tools:context="ch.ethz.inf.vs.kompose.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Join Party"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="53dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Party"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="119dp" />
 </android.support.constraint.ConstraintLayout>
