--- a/Kompose/app/src/main/res/values/colors.xml
+++ b/Kompose/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#CB0F0F</color>
+    <color name="colorPrimaryDark">#880F0F</color>
+    <color name="colorAccent">#EE3A39</color>
 </resources>
