--- a/Kompose/app/src/main/res/layout/activity_main_placeholder.xml
+++ b/Kompose/app/src/main/res/layout/activity_main_placeholder.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Join Party"
-        android:onClick="joinParty"
+        android:onClick="callConnectActivity"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Party"
-        android:onClick="createParty"
+        android:onClick="callCreationActivity"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
