--- a/Kompose/app/src/main/res/layout/activity_settings_placeholder.xml
+++ b/Kompose/app/src/main/res/layout/activity_settings_placeholder.xml
@@ -54,6 +54,31 @@
                 app:layout_constraintBottom_toBottomOf="@id/textview_setting_preload"
                 app:layout_constraintLeft_toRightOf="@id/textview_setting_preload"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.2" />
+
+            <TextView android:id="@+id/textview_setting_port"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/setting_port"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="40dp"
+                app:layout_constraintTop_toBottomOf="@id/textview_setting_preload"
+                app:layout_constraintLeft_toLeftOf="@id/textview_category_host" />
+
+            <EditText android:id="@+id/edittext_setting_port"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:inputType="number"
+                android:maxLength="5"
+                android:maxLines="1"
+                android:selectAllOnFocus="true"
+                app:layout_constraintTop_toTopOf="@id/textview_setting_port"
+                app:layout_constraintBottom_toBottomOf="@id/textview_setting_port"
+                app:layout_constraintLeft_toRightOf="@id/textview_setting_port"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.1" />
 
 
@@ -64,7 +89,7 @@
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold"
                 android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/textview_setting_preload"
+                app:layout_constraintTop_toBottomOf="@id/textview_setting_port"
                 app:layout_constraintLeft_toLeftOf="@id/textview_category_host"
                 />
 
