--- a/Kompose/app/src/main/res/values/colors.xml
+++ b/Kompose/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#880F0F</color>
     <color name="colorAccent">#EE3A39</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorRedFlat">#FF0000</color>
 </resources>
