commenting & working on message handler

--- a/Kompose/app/src/main/res/layout/activity_main_placeholder.xml
+++ b/Kompose/app/src/main/res/layout/activity_main_placeholder.xml
@@ -11,34 +11,48 @@
         android:id="@+id/button_main_join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Join Party"
         android:onClick="callConnectActivity"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Join Party"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.2"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.127" />
 
     <Button
         android:id="@+id/button_main_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Party"
         android:onClick="callCreationActivity"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Create Party"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/button_main_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View History"
         android:onClick="viewHistoryFromTitle"
+        android:text="View History"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
+
+    <Button
+        android:id="@+id/button_main_design"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="viewDesignFromTitle"
+        android:text="View Design"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.8"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.758" />
 </android.support.constraint.ConstraintLayout>
