--- a/Kompose/app/src/main/res/layout/activity_design.xml
+++ b/Kompose/app/src/main/res/layout/activity_design.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="client"
-            type="ch.ethz.inf.vs.kompose.model.ClientModel" />
+            name="designViewModel"
+            type="ch.ethz.inf.vs.kompose.view.viewmodel.DesignViewModel" />
     </data>
 
     <LinearLayout
@@ -16,7 +17,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{client.name}" />
+            android:text="@{designViewModel.client.name}" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/my_recycler">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickFriend"
+            android:text="add clients"/>
     </LinearLayout>
 </layout>
 
