--- a/Kompose/app/src/main/res/layout/activity_design.xml
+++ b/Kompose/app/src/main/res/layout/activity_design.xml
@@ -22,7 +22,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/my_recycler">
+            android:id="@+id/list">
 
         </android.support.v7.widget.RecyclerView>
 
