--- a/Kompose/app/src/main/res/layout/session_select_view.xml
+++ b/Kompose/app/src/main/res/layout/session_select_view.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewHolder"
-            type="ch.ethz.inf.vs.kompose.view.viewholder.ClickableItemViewHolder" />
+            type="ch.ethz.inf.vs.kompose.view.viewholder.SessionViewHolder" />
     </data>
 
 
