--- a/Kompose/app/src/main/res/layout/session_select_view.xml
+++ b/Kompose/app/src/main/res/layout/session_select_view.xml
@@ -18,7 +18,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/join" />
+            android:text="@string/join"
+            android:onClick="@{viewHolder.onJoinClick}"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
