--- a/Kompose/app/src/main/res/layout/activity_history_overview.xml
+++ b/Kompose/app/src/main/res/layout/activity_history_overview.xml
@@ -6,7 +6,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <variable
         name="viewModel"
-        type="ch.ethz.inf.vs.kompose.view.viewmodel.HistoryDetailsViewModel" />
+        type="ch.ethz.inf.vs.kompose.view.viewmodel.HistoryOverviewViewModel" />
 </data>
 
 <LinearLayout
