--- a/Kompose/app/src/main/res/layout/design_client_view.xml
+++ b/Kompose/app/src/main/res/layout/design_client_view.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewHolder"
-            type="ch.ethz.inf.vs.kompose.view.viewholder.ClientViewHolder" />
+            type="ch.ethz.inf.vs.kompose.view.viewholder.DesignClientViewHolder" />
     </data>
 
     <LinearLayout
