--- a/Kompose/app/src/main/res/layout/activity_connect.xml
+++ b/Kompose/app/src/main/res/layout/activity_connect.xml
@@ -27,6 +27,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textNoSuggestions"
+        android:text="@={viewModel.clientName}"
         />
 
     <android.support.v7.widget.RecyclerView
