--- a/Kompose/app/src/main/res/layout/activity_design.xml
+++ b/Kompose/app/src/main/res/layout/activity_design.xml
@@ -17,7 +17,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.client.name}" />
+            android:text="@{viewModel.client.name}"
+            />
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
