--- a/Kompose/app/src/main/res/layout/activity_party_creation_placeholder.xml
+++ b/Kompose/app/src/main/res/layout/activity_party_creation_placeholder.xml
@@ -22,8 +22,10 @@
         android:id="@+id/entry_creation"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/colorAccent"
         android:hint="name"
+        android:maxLines="1"
+        android:inputType="textPersonName"
+        android:imeOptions="actionDone"
         android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
