--- a/Kompose/app/src/main/res/layout/activity_playlist.xml
+++ b/Kompose/app/src/main/res/layout/activity_playlist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,17 +14,87 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+
+        <RelativeLayout
+            android:id="@+id/currently_playing"
+            android:layout_width="match_parent"
+            android:layout_height="40pt"
+            android:padding="3pt"
+            android:layout_margin="3pt"
+            android:background="#efefef">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/thumbnail"
+                android:src="@{viewModel.sessionModel.currentlyPlaying.thumbnail}"
+                />
+
+            <RelativeLayout
+                android:id="@+id/currently_playing_description"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@id/image"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/currently_playing_title"
+                    android:text="@{viewModel.sessionModel.currentlyPlaying.title}"
+                    tools:text="George Ezra - Listen to the Man"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/currently_playing_seconds_length"
+                    android:text="@{String.valueOf(viewModel.sessionModel.currentlyPlaying.secondsLength)}"
+                    tools:text="300"
+                    android:layout_below="@id/currently_playing_title"
+                    />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="proposed by "
+                        android:text="@string/proposed_by"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/currently_playing_seconds_proposed_by_name"
+                        android:text="@{viewModel.sessionModel.currentlyPlaying.proposedBy.name}"
+                        tools:text="client"
+                        />
+                </LinearLayout>
+            </RelativeLayout>
+
+        </RelativeLayout>
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10pt"
+            android:layout_marginLeft="3pt"
+            android:layout_marginRight="3pt"
+            >
 
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
+
 </layout>
 
