--- a/Kompose/app/src/main/res/layout/history_song_view.xml
+++ b/Kompose/app/src/main/res/layout/history_song_view.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewHolder"
-            type="ch.ethz.inf.vs.kompose.view.viewholder.PastSessionViewHolder" />
+            type="ch.ethz.inf.vs.kompose.view.viewholder.PlayedSongViewHolder" />
     </data>
 
 
@@ -20,31 +20,19 @@
         android:padding="3pt">
 
         <TextView
+            android:id="@+id/currently_playing_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{viewHolder.item.name}"
+            android:text="@{viewHolder.item.title}"
             android:textColor="#000"
-            tools:text="example name of session" />
+            tools:text="example text of video" />
 
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/currently_playing_seconds_length"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{String.valueOf(viewHolder.item.allSongList.size())}"
-                tools:text="300" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/songs_contained"
-                tools:text=" songs contained" />
-
-        </LinearLayout>
+            android:text="@{String.valueOf(viewHolder.item.secondsLength)}"
+            tools:text="length of my video"/>
 
     </LinearLayout>
 </layout>
